portfolio/src/Landing/Experience/Content/index.css
.experience-container > ul {
  --col-gap: 2rem;
  --row-gap: 2rem;
  --line-w: 0.25rem;
  display: grid;
  grid-template-columns: var(--line-w) 1fr;
  grid-auto-columns: max-content;
  column-gap: var(--col-gap);
  list-style: none;
  width: min(60rem, 100%);
  margin: 0 auto;
}

@media screen and (max-width: 600px) {
  .experience-container > ul {
    width: 85%;
    padding: 0 1rem 0 2rem;
  }
}

/* line */
.experience-container > ul::before {
  content: "";
  grid-column: 1;
  width: 2px;
  grid-row: 1 / span 20;
  background: var(--orange-shade);
  border-radius: calc(var(--line-w) / 2);
}

/* columns*/

/* row gaps */
.experience-container > ul li:not(:last-child) {
  margin-bottom: var(--row-gap);
}

/* ul li:is(:last-child) {
  margin-bottom: 5rem;
} */

/* card */
.experience-container > ul li {
  grid-column: 2;
  --inlineP: 1.5rem;
  margin-inline: var(--inlineP);
  grid-row: span 2;
  display: grid;
  grid-template-rows: min-content min-content min-content;
}

/* date */
.experience-container > ul li .date {
  --dateH: 3rem;
  height: var(--dateH);
  margin-inline: calc(var(--inlineP) * -1);

  text-align: center;

  color: var(--milky-white);
  font-size: 1.25rem;
  font-weight: 700;

  display: grid;
  place-content: center;
  position: relative;
}

/* date flap */
.experience-container > ul li .date::before {
  content: "";
  width: var(--inlineP);
  aspect-ratio: 1;
  background: var(--orange-shade);
  background-image: linear-gradient(rgba(0, 0, 0, 0.2) 100%, transparent);
  position: absolute;
  top: 100%;

  clip-path: polygon(0 0, 90% 0, 0 90%);
  right: 0;
}

/* circle */
.experience-container > ul li .date::after {
  content: "";
  position: absolute;
  width: 1.5rem;
  aspect-ratio: 1;
  background: rgb(58, 56, 56);
  border: 0.3rem solid var(--orange-shade);
  border-radius: 50%;
  top: 50%;

  transform: translate(50%, -50%);
  right: calc(100% + var(--col-gap) + var(--line-w) / 2);
}

/* title descr */
.experience-container > ul li .title,
ul li .descr {
  position: relative;
  /* padding-inline: 0.1rem; */
  color: var(--milky-white);
  height: max-content;
  padding-top: 1rem;
  font-style: oblique;
}
.experience-container > ul li .title {
  overflow: hidden;
  padding-block-start: 1.5rem;
  padding-block-end: 1rem;
  font-weight: 500;
}
.experience-container > ul li .descr {
  padding-block-end: 1.5rem;
  font-weight: 300;
}

.experience-container > ul li .descr p {
  margin: 0;
  letter-spacing: 0.7px;
  line-height: 29px;
  text-align: left;
}

/* shadows */
.experience-container > ul li .title::before,
ul li .descr::before {
  content: "";
  position: absolute;
  width: 95%;
  height: 0.2rem;
  background: var(--orange-shade);
  left: 50%;
  border-radius: 50%;
  filter: blur(3px);
  transform: translate(-50%, 50%);
}
.experience-container > ul li .title::before {
  bottom: calc(100% + 0.125rem);
}

.experience-container > ul li .descr::before {
  z-index: -1;
  bottom: 0.25rem;
}

@media (min-width: 40rem) {
  .experience-container > ul {
    grid-template-columns: 1fr var(--line-w) 1fr;
  }
  .experience-container > ul::before {
    grid-column: 2;
  }
  .experience-container > ul li:nth-child(odd) {
    grid-column: 1;
  }
  .experience-container > ul li:nth-child(even) {
    grid-column: 3;
  }

  /* start second card */
  .experience-container > ul li:nth-child(2) {
    grid-row: 2/4;
  }

  .experience-container > ul li:nth-child(odd) .date::before {
    clip-path: polygon(0 0, 100% 0, 100% 100%);
    left: 0;
  }

  .experience-container > ul li:nth-child(odd) .date::after {
    transform: translate(-50%, -50%);
    left: calc(100% + var(--col-gap) + var(--line-w) / 2);
  }
  .experience-container > ul li:nth-child(odd) .date {
    border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
  }
}

.credits {
  margin-top: 1rem;
  text-align: right;
}
.credits a {
  color: var(--color);
}

